<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <com.example.lab26.CustomPreferenceCategory android:title="@string/wifi_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="wifi"
            android:summary="@string/wifi_summary"
            android:title="@string/wifi_title" />
    </com.example.lab26.CustomPreferenceCategory>

    <PreferenceCategory android:title="@string/hints_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="hints"
            android:summary="@string/hints_summary"
            android:title="@string/hints_title" />
    </PreferenceCategory>

    <EditTextPreference
        android:defaultValue="14"
        android:dialogTitle="@string/font_dialog_title"
        android:key="test_size"
        android:summary="@string/font_summary"
        android:title="@string/font_title" />

    <PreferenceCategory android:title="@string/font_preference_category_title">
        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/font_style_dialog_title"
            android:entries="@array/text_style"
            android:entryValues="@array/text_style"
            android:key="test_style"
            android:summary="@string/font_style_summary"
            android:title="@string/font_style_title" />

        <SwitchPreference
            android:key="glad"
            android:summaryOff="@string/cat_switch_summary_off"
            android:summaryOn="@string/cat_switch_summary_on"
            android:switchTextOff="@string/cat_switch_text_off"
            android:switchTextOn="@string/cat_switch_text_on" />
    </PreferenceCategory>

    <PreferenceScreen
        android:key="text_color"
        android:title="Цвет текста"
        android:summary="Устанавливает цвет для текста">

        <CheckBoxPreference
            android:key="text_color_black"
            android:title="Черный"
            android:defaultValue="true"
            android:summary="Устанавливает черный цвет" />
        <CheckBoxPreference
            android:key="text_color_red"
            android:title="Красный"
            android:summary="Устанавливает красный цвет" />
        <CheckBoxPreference
            android:key="text_color_green"
            android:title="Зеленый"
            android:summary="Устанавливает зеленый цвет" />
        <CheckBoxPreference
            android:key="text_color_blue"
            android:title="Синий"
            android:summary="Устанавливает синий цвет" />
    </PreferenceScreen>

    <PreferenceScreen
        android:summary="Импортированная системная настройка"
        android:title="Настройка через намерение" >
        <intent android:action="android.settings.AIRPLANE_MODE_SETTINGS" />
    </PreferenceScreen>

    <PreferenceScreen
        android:title="Вопрос про кота">

        <CheckBoxPreference
            android:key="cat_key"
            android:title="У вас есть кот?"
            android:summary="Доступно для владельцев котов"
            android:defaultValue="true" />
        <EditTextPreference
            android:key="catfood"
            android:title="Подарки для кота"
            android:summary="Угости кота"
            android:dependency="cat_key" />
    </PreferenceScreen>

    <com.example.lab26.SeekBarDialogPreference
        android:defaultValue="20"
        android:dialogMessage="Выберите нужное значение:"
        android:key="height"
        android:max="50"
        android:summary="Высота кота в см"
        android:title="Рост кота"
        custom:min="1"
        custom:progressTextSuffix=" см" />

    <com.example.lab26.NumberPickerDialogPreference
        android:defaultValue="200"
        android:dialogMessage="Выберите суточный паёк для кота в граммах:"
        android:max="250"
        android:title="Печёнка для кота (гр)"
        custom:min="100" />

    <PreferenceCategory android:title="Запуск сайта через Intent" >
        <PreferenceScreen
            android:summary="developer.alexanderklimov.ru/android"
            android:title="Освой Android играючи" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://developer.alexanderklimov.ru/android/" />
        </PreferenceScreen>
    </PreferenceCategory>

    <ListPreference
        android:defaultValue="1"
        android:dialogTitle="Выберите стиль для шрифта"
        android:entries="@array/text_style"
        android:entryValues="@array/text_style"
        android:key="pref_style"
        android:summary="Устанавливает стиль для шрифта"
        android:title="Стиль для шрифта" />


</PreferenceScreen>